--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -117,6 +117,8 @@
   ;; Configurar C-{ y C-} para moverte entre las ventanas
   (global-set-key (kbd "C-{") 'windmove-left)
   (global-set-key (kbd "C-}") 'windmove-right)
+  ;; Select all the text
+  (global-set-key (kbd "C-a") 'mark-whole-buffer)
 #+end_src
 
 *** Backups
@@ -458,27 +460,28 @@ programming modes.
 #+end_src
 ** LSP Initialize
 #+begin_src emacs-lisp
-  (use-package lsp-mode
-    :config
-    (setq lsp-prefer-flymake nil)
-    :hook ((php-mode python-mode js-mode web-mode glsl-mode) . lsp)
-    :commands lsp)
-  (use-package lsp-ui
-    :requires lsp-mode flycheck
-    :config
-    (setq lsp-ui-doc-enable t
-	  lsp-ui-doc-use-childframe t
-	  lsp-ui-doc-position ‘top
-	  lsp-ui-doc-include-signature t
-	  lsp-ui-sideline-enable nil
-	  lsp-ui-flycheck-enable t
-	  lsp-ui-flycheck-list-position ‘right
-	  lsp-ui-flycheck-live-reporting t
-	  lsp-ui-peek-enable t
-	  lsp-ui-peek-list-width 60
-	  lsp-ui-peek-peek-height 25
-	  lsp-ui-sideline-enable nil)
-    (add-hook ‘lsp-mode-hook ‘lsp-ui-mode))
+      (use-package lsp-mode
+	:config
+	(setq lsp-prefer-flymake nil
+	      lsp-glsl-server-command '("glsl-language-server" "--stdio"))
+	:hook ((php-mode python-mode js-mode web-mode glsl-mode) . lsp)
+	:commands lsp)
+      (use-package lsp-ui
+	:requires lsp-mode flycheck
+	:config
+	(setq lsp-ui-doc-enable t
+	      lsp-ui-doc-use-childframe t
+	      lsp-ui-doc-position ‘top
+	      lsp-ui-doc-include-signature t
+	      lsp-ui-sideline-enable nil
+	      lsp-ui-flycheck-enable t
+	      lsp-ui-flycheck-list-position ‘right
+	      lsp-ui-flycheck-live-reporting t
+	      lsp-ui-peek-enable t
+	      lsp-ui-peek-list-width 60
+	      lsp-ui-peek-peek-height 25
+	      lsp-ui-sideline-enable nil)
+	(add-hook ‘lsp-mode-hook ‘lsp-ui-mode))
 #+end_src
 
 * Extentions
